fix tooltip bug with visibility

--- a/src/client/components/View1/view1.scss
+++ b/src/client/components/View1/view1.scss
@@ -126,6 +126,7 @@ Usage:
 // style tooltip help text
 .tooltip {
   background-color: #5755d9;
+  z-index: 999;
 }
 /*
 CSS GRID CHEATSHEET
